--- a/ecommerce-project/package.json
+++ b/ecommerce-project/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "run-s build:frontend build:backend",
+    "build:frontend": "vite build",
+    "build:backend": "npm --prefix ../ecommerce-backend run zip",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,11 +26,13 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "npm-run-all": "^4.1.5",
     "vite": "^6.3.5",
     "vitest": "^3.1.2"
   }
